Make the run-tests job depend on the install-dependencies tests

--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -24,6 +24,8 @@ jobs:
     runs-on: ubuntu-latest
     container: php:7.3-cli
 
+    needs: install-dependencies
+
     steps:
     - name: Run test suite
       run: vendor/bin/phpunit
