Specifiy dependency path on artifact download

--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -37,6 +37,7 @@ jobs:
     - uses: actions/download-artifact@master
       with:
         name: dependencies
+        path: vendor
 
     - name: Run test suite
       run: vendor/bin/phpunit
