--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -16,12 +16,13 @@ jobs:
         run: vendor/bin/php-cs-fixer fix --dry-run --using-cache=no
 
   run-tests:
-    name: Run Test Suite
+    name: Test Suite
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout repository
+      uses: actions/checkout@v1
 
     - name: Validate composer.json and composer.lock
       run: composer validate
